feat(api,sdk): allow uuid in session creation(#246)
